Fri Aug  2 12:52:08 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Added missing package

Wed Jul 24 15:07:07 UTC 2013  Jeff Parsons <j.parsons@vanderbilt.edu>

        * Added Yogesh Sharma <Yogesh dot Sharma at saabsensis dot com>
          to THANKS file

Mon Jul 22 08:57:44 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/debian.control:
          Fixed some bugs in this file

Thu Jul 18 19:21:38 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * Happy Birthday to me ;-)

Tue Jul  2 20:52:26 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * contrib/minizip/zip.c:
        * performance-tests/UDP/udp_test.cpp:

          Minor coverity fixes.

Fri Jun 28 09:34:03 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/vc12nmake.mpb:
          New msvc12 file

Thu Jun 27 17:03:05 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>

        * ace/Log_Category.h:
          Refine the class documentation to avoid confusion.  Thanks to
          Piotr Kow <pkow88776 at onet dot pl> for motivating this.

Thu Jun 27 09:50:25 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Service_Config_Test.cpp:
          Extended this test to run the usage of service config
          with multiple threads to check if we don't leak any TSS keys
          on Windows when ACE is used from a non ACE thread. With
          this addition I couldn't reproduce bugzilla 1797, but I still
          have to double check if the TSS is really triggered by
          my test addition.

Wed Jun 26 14:20:47 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/coverity_profile.txt:
        * bin/ACE+TAO+CIAO+DAnCE.json:
          Renamed to the file Coverity expects

Wed Jun 26 11:32:43 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/coverity_profile.txt:
          Added coverity profile
